Changes from jTDS 0.9
=========================

11/15/2004 - Alin Sinpalean
 o Partially applied patch [1065036] Problems with connection pooling and jTDS.
 o Cleaned up default value assignment to URL parameters, moving everything to
   DefaultProperties and replaced all property key literals with constants.
 o Corrected bug [1062395] Empty (but not null) blobs should return byte[0].
 o Applied Mike's fix for bug [1062549] Build fails under java 1.3.
 o Corrected bug [1062198] SecurityException not caught in class
   ConnectionJDBC2 (fix by Andreas Mross - amross).

11/10/2004 - David Kilzer
 o Fixed case of 'props.tcpnodelay' in JtdsDataSource.getConnection() (two
   unit tests were failing).
 o Added test for 'tcpNoDelay' property to DefaultPropertiesTestLibrary.

11/08/2004 - Brian Heineman
 o Added tcpNoDelay driver property; default is true.

11/05/2004 - Alin Sinpalean
 o Applied Mike's fix for bug [1060466] SQL Executed twice.
 o Applied Mike's fix for bug [1059916] Whitespace needed in preparedStatement.
 o Tiny fix in XaTest to avoid deadlocks in case an SQLException is thrown.

11/03/2004 - Alin Sinpalean
 o Updated JtdsDatabaseMetaData.getProcedures() to only cut off the ";" at the
   end of the procedure name for the first procedure (i.e. if it's ";1").

11/01/2004 - Alin Sinpalean
 o Corrected bug [1057237] Protocol Exception processing TDS_COLINFO packets.

10/27/2004 - Alin Sinpalean
 o Ran the FindBugs tool (http://findbugs.sourceforge.net) on the jTDS code
   base with no major results. Most signalled problems were either in the test
   suite or minor suggestions on the driver itself. Applied all suggestions
   that made sense.
 o Applied Mike's patch [1054878] Improved meta data. In addition to metadata
   improvements, the patch fixes a number of bugs, including [1049645]
   DatabaseMetaData getProcedures names have semicolon, [1019707]
   metaData.getProcedures has missing 8th column on Sybase and [1043569]